<resources>
    <string name="app_name">Zuperior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onbj1">Kamera Ajaib</string>
    <string name="onbd1">Belajar sambil bermain \n dengan teknologi AR</string>
    <string name="onbj2">Artikel Pembelajaran</string>
    <string name="onbd2">Video pembelajaran dari segala \n materi pelajaran</string>
    <string name="onbj3">Quiz</string>
    <string name="onbd3">Ajak temanmu untuk adu quiz \n dan belajar bersama</string>
    <string name="tv1">Mau Belajar Apa hari Ini ?</string>
    <string name="mtk">Matematika</string>
    <string name="pkn">Pendidikan Kewarganegaraan</string>
    <string name="ips">Ilmu Pengetahuan Sosial</string>
    <string name="ipa">Ilmu Pengetahuan Alam</string>
    <string name="seni_bidaya">Seni Bidaya</string>
    <string name="bahasa_indonesi">Bahasa Indonesi</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kelas_3">kelas 3</string>
    <string name="kelas_1">kelas 1</string>
    <string name="kelas_2">kelas 2</string>
    <string name="poinmu">Poinmu</string>
    <string name="title_activity_tes">Tes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_kategori_artikel">kategori_artikel</string>
</resources>