<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent"
    android:background="@color/background">

<!--  Container  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <!--  Header Menu Kamera  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <!--        <androidx.cardview.widget.CardView-->
            <!--            app:cardBackgroundColor="#C84D2B"-->
            <!--            android:id="@+id/back"-->
            <!--            app:cardCornerRadius="10dp"-->
            <!--            android:layout_width="42dp"-->
            <!--            android:layout_height="42dp">-->

            <!--            <ImageView-->
            <!--                android:src="@drawable/backsicapin"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"/>-->

            <!--        </androidx.cardview.widget.CardView>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunitbold"
                android:gravity="center"
                android:text="Pilih Materi Belajar"
                android:textColor="@color/primary"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
        <!--  EndHeader Menu Kamera  -->


        <!--  Card Menu  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <!--    Section Card 1    -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvmtk"
                    android:layout_width="147dp"
                    android:layout_height="144dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/brown"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_card1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivmtk"
                            android:layout_width="103dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:src="@drawable/mtk" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/nunitbold"
                            android:gravity="center"
                            android:text="@string/mtk"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvipa"
                    android:layout_width="147dp"
                    android:layout_height="144dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="14dp"
                    app:cardBackgroundColor="@color/brown"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_card2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivipa"
                            android:layout_width="103dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ipa" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/nunitbold"
                            android:gravity="center"
                            android:text="@string/ipa"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <!--    EndSection Card 1    -->


            <!--    Section Card 2    -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvips"
                    android:layout_width="147dp"
                    android:layout_height="144dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/brown"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_card2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivips"
                            android:layout_width="103dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ips" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/nunitbold"
                            android:gravity="center"
                            android:text="@string/ips"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvpkn"
                    android:layout_width="147dp"
                    android:layout_height="144dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="14dp"
                    app:cardBackgroundColor="@color/brown"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_card1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivpkn"
                            android:layout_width="103dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:src="@drawable/pkn" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/nunitbold"
                            android:gravity="center"
                            android:text="@string/pkn"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!--    EndSection Card 2    -->

            <!--    Section Card 3    -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    app:cardElevation="10dp"
                    android:id="@+id/cvseni"
                    android:layout_width="147dp"
                    android:layout_height="144dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/brown"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_card1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivseni"
                            android:layout_width="103dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:src="@drawable/senibudaya" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/nunitbold"
                            android:gravity="center"
                            android:text="@string/seni_bidaya"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_marginLeft="14dp"
                        app:cardElevation="10dp"
                        android:id="@+id/cvbindo"
                        android:layout_width="147dp"
                        android:layout_height="144dp"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="@color/brown"
                        app:cardCornerRadius="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_card2"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/ivbindo"
                                android:layout_width="103dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center"
                                android:src="@drawable/bahasaindo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/nunitbold"
                                android:gravity="center"
                                android:text="@string/bahasa_indonesi"
                                android:textColor="@color/white"
                                android:textSize="14dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!--    EndSection Card 3    -->


        </LinearLayout>
        <!--  EndCard Menu  -->

    </LinearLayout>

<!--  EndContainer  -->
</RelativeLayout>