<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="15dp"
    android:layout_gravity="center"
    tools:context=".Fragmen.BacaArtikel">

    <!-- TODO: Update blank fragment layout -->

    <!--  Header Menu Kamera  -->
    <LinearLayout
        android:layout_marginTop="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--        <androidx.cardview.widget.CardView-->
        <!--            app:cardBackgroundColor="#C84D2B"-->
        <!--            android:id="@+id/back"-->
        <!--            app:cardCornerRadius="10dp"-->
        <!--            android:layout_width="42dp"-->
        <!--            android:layout_height="42dp">-->

        <!--            <ImageView-->
        <!--                android:src="@drawable/backsicapin"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"/>-->

        <!--        </androidx.cardview.widget.CardView>-->

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/nunitbold"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mau baca apa hari ini ?"/>

    </LinearLayout>
    <!--  EndHeader Menu Kamera  -->
    <!--  Card Menu  -->
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--    Section Card 1    -->
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvmtk"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/brown"
                app:cardCornerRadius="15dp"
                android:layout_width="147dp"
                android:layout_height="144dp">

                <LinearLayout
                    android:background="@drawable/bg_card1"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivmtk"
                        android:layout_gravity="center"
                        android:layout_width="103dp"
                        android:layout_height="55dp"
                        android:src="@drawable/penggaris"/>

                    <TextView
                        android:textSize="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitbold"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/mtk" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginLeft="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvipa"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/brown"
                    app:cardCornerRadius="15dp"
                    android:layout_width="147dp"
                    android:layout_height="144dp">

                    <LinearLayout
                        android:background="@drawable/bg_card2"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/ivipa"
                            android:layout_gravity="center"
                            android:layout_width="103dp"
                            android:layout_height="55dp"
                            android:src="@drawable/buku"/>

                        <TextView
                            android:textSize="14dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitbold"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:text="@string/ipa" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
        <!--    EndSection Card 1    -->


        <!--    Section Card 2    -->

        <LinearLayout
            android:layout_marginTop="17dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvips"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/brown"
                app:cardCornerRadius="15dp"
                android:layout_width="147dp"
                android:layout_height="144dp">

                <LinearLayout
                    android:background="@drawable/bg_card2"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivips"
                        android:layout_gravity="center"
                        android:layout_width="103dp"
                        android:layout_height="55dp"
                        android:src="@drawable/pensil"/>

                    <TextView
                        android:textSize="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitbold"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/ips" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginLeft="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvpkn"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/brown"
                    app:cardCornerRadius="15dp"
                    android:layout_width="147dp"
                    android:layout_height="144dp">

                    <LinearLayout
                        android:background="@drawable/bg_card1"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/ivpkn"
                            android:layout_gravity="center"
                            android:layout_width="103dp"
                            android:layout_height="55dp"
                            android:src="@drawable/bukukuning"/>

                        <TextView
                            android:textSize="14dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitbold"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:text="@string/pkn" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <!--    EndSection Card 2    -->



    </LinearLayout>
    <!--  EndCard Menu  -->



</LinearLayout>